@@ -87,14 +87,6 @@ RELEASE SHOWSTOPPERS:
 PATCHES ACCEPTED TO BACKPORT FROM TRUNK:
   [ start all new proposals below, under PATCHES PROPOSED. ]
 
- * mod_cache: treat s-maxage as an explicit expiration in cacheability
-              decisions, per RFC 2616
-   Trunk Patch: http://svn.apache.org/viewvc?rev=823536&view=rev
-                http://svn.apache.org/viewvc?rev=823563&view=rev
-   2.2.x Patch: http://people.apache.org/~poirier/smaxage.patch
-                (trunk patch works, except for CHANGES)
-   +1: poirier, sf, covener
-
  * mod_rewrite: don't fully qualify hostname:port if the request is a CONNECT
                 request
    Trunk Patch: http://svn.apache.org/viewvc?view=rev&revision=822004
